[project]
name = "carrots-budget"
version = "0.1.0"
description = "A personal finance web app for budgeting and spending tracking built with Django"
requires-python = ">=3.11"

dependencies = [
    "django>=5.2,<5.3",
    "django-allauth>=0.57.0",
    "django-debug-toolbar",
    "django-environ",
    "django-extensions",
    "django-htmx>=1.27.0",
    "psycopg2-binary>=2.9.1",
    "whitenoise>=6.5",
]

[project.optional-dependencies]
dev = [
    "factory-boy",
]

[tool.uv]
dev-dependencies = [
    "factory-boy",
]
